@@ -40,7 +40,12 @@ void pop3client::read(){
     char buff[8000]{};
     memset(buff, 0, sizeof(buff));
 
-    recv(sd, buff, sizeof(buff) - 1, 0);
+    if(tls){
+        gnutls_record_recv(gnutls_sd, buff, sizeof(buff) - 1);
+    }else{
+        recv(sd, buff, sizeof(buff) - 1, 0);
+    }
+
     string rec = buff;
     cout << rec;
 }
@@ -51,7 +56,13 @@ int pop3client::write(std::string msg){
     const char *cmsg = msg.c_str();
     int msg_len = strlen(cmsg);
 
-    int result = send(sd, cmsg, msg_len, 0);
+    int result = 0;
+
+    if(tls){
+        result = gnutls_record_send(gnutls_sd, cmsg, msg_len);
+    }else{
+        result = send(sd, cmsg, msg_len, 0);
+    }
 
     return result;
 }
@@ -59,6 +70,10 @@ int pop3client::write(std::string msg){
 int pop3client::temp(){
     resolve();
     socket_setup();
+    
+    if(tls){
+        gnutls_setup();
+    }
 
     // temporärer pfusch
     usleep(100000);
@@ -85,14 +100,44 @@ int pop3client::resolve() {
     return 1;
 }
 
-/*
 
 // http://www.hep.by/gnu/gnutls/Simple-client-example-with-X_002e509-certificate-support.html#Simple-client-example-with-X_002e509-certificate-support
-int gnutls_setup(){
+int pop3client::gnutls_setup(){
+    int ret;
+    const char *err;
+
     gnutls_global_init ();
     gnutls_certificate_allocate_credentials (&xcred);
 
-}*/
+    gnutls_certificate_set_x509_system_trust(xcred);
+    gnutls_init (&gnutls_sd, GNUTLS_CLIENT);
+
+    //gnutls_session_set_ptr (session, (void *) hostname);
+    //gnutls_transport_set_ptr (gnutls_sd, (gnutls_transport_ptr_t) sd);
+    // wird ned so wichtig sein, geht auch ohne
+
+    gnutls_server_name_set (gnutls_sd, GNUTLS_NAME_DNS, hostname.c_str(), strlen(hostname.c_str()));
+    ret = gnutls_priority_set_direct (gnutls_sd, "NORMAL", &err);
+    gnutls_credentials_set (gnutls_sd, GNUTLS_CRD_CERTIFICATE, xcred);
+
+    gnutls_transport_set_int(gnutls_sd, sd);
+    gnutls_handshake_set_timeout(gnutls_sd, GNUTLS_DEFAULT_HANDSHAKE_TIMEOUT);
+
+    int err_handshake = gnutls_handshake(gnutls_sd);
+    if(err_handshake){
+        return 1;
+    }
+
+    return 0;
+}
+
+void pop3client::gnutls_destruction(){
+    gnutls_bye (gnutls_sd, GNUTLS_SHUT_RDWR);
+
+    gnutls_deinit (gnutls_sd);
+    gnutls_certificate_free_credentials (xcred);
+    gnutls_global_deinit ();
+}
 
 
 void pop3client::socket_destruction(){
