@@ -1,0 +1,14 @@
+/*
+author: David Fischer
+matnr:  i16079
+file:   util.cpp
+desc:   NVS Projekt 2 - Simpler POP3 Client mit TLS Support
+class:  5C
+catnr:  03
+*/
+
+#include "util.h"
+
+using namespace std;
+
+void pop3client_utils::email_to_file();
