@@ -8,6 +8,7 @@
 - Add basic socket to pop3client Class
 - Add basic resolver to pop3client Class
 - Add read and write methods to pop3client Class
+- Add GnuTLS support to pop3client Class (Setup, read/write methods)
 *** Removed
 - Removed subprocess attempt
 ** [0.0.3] - 2020-03-02
